Package: annmatrix
==================

Version: 0.1.1 [TBD]

NEW FEATURES:

 * New generic method 'as.annmatrix()' which will be used to convert other objects to annmatrix.
 * New method 'as.annmatrix.matrix()' for turning a regular matrix into annmatrix with empty annotations.
 * New method 'stack.annmatrix()' for turning annmatrix object into a data frame.

DOCUMENTATION:

 * Simplified the documentation of 'help(annmatrix)' by moving conversion and subsetting methods to another place.


Version: 0.1.0 [TBD]

NEW FEATURES:

 * Created and submitted to CRAN.
