@@ -9,6 +9,8 @@ S3method("@",annmatrix)
 S3method("@<-",annmatrix)
 S3method(.AtNames,annmatrix)
 S3method(.DollarNames,annmatrix)
+S3method(rbind,annmatrix)
+S3method(cbind,annmatrix)
 S3method(t,annmatrix)
 S3method("%*%",annmatrix)
 S3method(prcomp,annmatrix)
