@@ -5,6 +5,7 @@ Version: 0.1.1 [TBD]
 
 NEW FEATURES:
 
+ * New generic methods 'rbind()' and 'cbind()' that preserve the class and all annotations.
  * New generic method 'as.annmatrix()' which will be used to convert other objects to annmatrix.
  * New method 'as.annmatrix.matrix()' for turning a regular matrix into annmatrix with empty annotations.
  * New method 'stack.annmatrix()' for turning annmatrix object into a data frame.
